--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,24 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                    <img  class="progect-box__img" src="./image/tehnokryak.jpg" alt="фото команды">
+                                <picture>
+                                    <source
+                                        srcset="./image/tehnocryak_desktop.webp 1x, 
+                                                ./image/tehnocryak_desktop@2x.webp 2x"
+                                            media="(min-width:1200px)"/>
+                                    <source 
+                                        srcset="./image/tehnocryak_tab.webp 1x, 
+                                                ./image/tehnocryak_tab@2x.webp 2x" 
+                                            media="(min-width:768px)" />
+                                    <source 
+                                        srcset="./image/tehnocryak_mobile.webp 1x, 
+                                                ./image/tehnocryak_mobile@2x.webp 2x" 
+                                            media="(min-width:320px)" />
+
+                                    <img  class="progect-box__img" 
+                                            src="./image/tehnocryak_desktop.webp" 
+                                            alt="фото команди">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -121,7 +138,26 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/img-nba.jpg" alt="два баскетолиста" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/new_orlean_desktop.webp 1x,
+                                            ./image/new_orlean_desktop@2x.webp 2x"
+                                        media="(min-width:1200px)"/>
+
+                                    <source 
+                                        srcset="./image/new_orlean_tab.webp 1x,
+                                                ./image/new_orlean_tab@2x.webp 2x" 
+                                                media="(min-width:768px)"/>
+
+                                    <source 
+                                        srcset="./image/new_orlean_mobile.webp 1x,
+                                                ./image/new_orlean_mobile@2x.webp 2x" 
+                                                media="(min-width:320px)"/>
+
+                                    <img class="progect-box__img" 
+                                        src="./image/new_orlean_desktop.webp" 
+                                        alt="два баскетолиста">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -139,7 +175,24 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/seafoot.jpg" alt="логотип ресторана" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/sea_food_desktop.webp 1x,
+                                                ./image/sea_food_desktop@2x.webp 2x"
+                                                media="(min-width:1200px)"/>
+                                    <source
+                                        srcset="./image/sea_food_tab.webp 1x,
+                                                ./image/sea_food_tab@2x.webp 2x"
+                                                media="(min-width:768px)"/>
+                                    <source 
+                                        srcset="./image/sea_food_mobile.webp.webp 1x,
+                                                ./image/sea_food_mobile@2x.webp 2x" 
+                                                media="(min-width:320px)" />
+
+                                        <img class="progect-box__img" 
+                                            src="./image/sea_food_desktop.webp" 
+                                            alt="логотип ресторана">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -157,11 +210,29 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/music.jpg" alt="наушники" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/prime_desktop.webp 1x,
+                                                ./image/prime_desktop@2x.webp 2x"
+                                        media="(min-width:1200px)"/>
+
+                                    <source 
+                                        srcset="./image/prime_tab.webp 1x,
+                                                ./image/prime_tab@2x.webp 2x" 
+                                        media="(min-width:768px)" />
+
+                                    <source 
+                                        srcset="./image/prime_mobile.webp 1x,
+                                                ./image/prime_mobile@2x.webp 2x" 
+                                        media="(min-width:320px)" />
+
+                                        <img class="progect-box__img" 
+                                        src="./image/prime_desktop.webp" 
+                                        alt="наушники">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-
                                     </p>
                                 </div>
                             </div>
@@ -175,11 +246,28 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/boxes.jpg" alt="две коробки" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/boxes_desktop.webp 1x,
+                                            ./image/boxes_desktop@2x.webp 2x"
+                                        media="(min-width:1200px)"/>
+                                    <source 
+                                        srcset="./image/boxes_tab.webp 1x,
+                                            ./image/boxes_tab@2x.webp 2x" 
+                                        media="(min-width:768px)"/>
+
+                                    <source 
+                                        srcset="./image/boxes_mobile.webp 1x,
+                                                ./image/boxes_mobile@2x.webp 2x" 
+                                        media="(min-width:320px)"/>
+
+                                        <img class="progect-box__img" 
+                                        src="./image/boxes_desktop.webp" 
+                                        alt="две коробки">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-
                                     </p>
                                 </div>
                             </div>
@@ -193,7 +281,24 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/monitor.jpg" alt="монитор с сайтом" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/inspiration_desktop.webp 1x,
+                                            ./image/inspiration_desktop@2x.webp 2x"
+                                            media="(min-width:1200px)"/>
+                                    <source 
+                                        srcset="./image/inspiration_tab.webp 1x,
+                                            ./image/inspiration_tab@2x.webp 2x" 
+                                        media="(min-width:768px)"/>
+                                    <source 
+                                        srcset="./image/inspiration_mobile.webp 1x,
+                                            ./image/inspiration_mobile@2x.webp 2x" 
+                                        media="(min-width:320px)" />
+
+                                    <img class="progect-box__img" 
+                                    src="./image/inspiration_desktop.webp" 
+                                    alt="монитор с сайтом">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -211,7 +316,26 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/limited-boks.jpg" alt="эксклюзивное издание" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/limited_desktop.webp 1x,
+                                            ./image/limited_desktop@2x.webp 2x" 
+                                        media="(min-width:1200px)"/>
+
+                                    <source
+                                        srcset="./image/limited_tab.webp 1x,
+                                            ./image/limited_tab@2x.webp 2x"
+                                        media="(min-width:768px)"/>
+                                    
+                                    <source    
+                                        srcset="./image/limited_mobile.webp 1x,
+                                                ./image/limited_mobile@2x.webp 2x" 
+                                            media="(min-width:320px)" />
+
+                                    <img class="progect-box__img" 
+                                    src="./image/limited_desktop.webp" 
+                                    alt="эксклюзивное издание">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -229,11 +353,27 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/label.jpg" alt="лэйба" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/lab_desktop.webp 1x,
+                                            ./image/lab_desktop@2x.webp 2x"
+                                        media="(min-width:1200px)"/>
+                                    <source 
+                                        srcset="./image/lab_tab.webp 1x,
+                                            ./image/lab_tab@2x.webp 2x" 
+                                        media="(min-width:768px)"/>
+                                    <source 
+                                        srcset="./image/lab_mobile.webp 1x,
+                                                ./image/lab_mobile@2x.webp 2x" 
+                                        media="(min-width:320px)"/>
+
+                                    <img class="progect-box__img" 
+                                        src="./image/lab_desktop.webp" 
+                                        alt="лейба">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-
                                     </p>
                                 </div>
                             </div>
@@ -247,11 +387,27 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img class="progect-box__img" src="./image/laptop.jpg" alt="ноутбук с заставкой сайта" width="">
+                                <picture>
+                                    <source
+                                        srcset="./image/growing_desktop.webp 1x,
+                                            ./image/growing_desktop@2x.webp 2x"
+                                        media="1200px"/>
+                                    <source 
+                                        srcset="./image/growing_tab.webp 1x,
+                                            ./image/growing_tab@2x.webp 2x" 
+                                        media="768px"/>
+                                    <source 
+                                        srcset="./image/growing_mobile.webp 1x,
+                                                ./image/growing_mobile@2x.webp 2x" 
+                                        media="320px"/>
+
+                                    <img class="progect-box__img" 
+                                        src="./image/growing_desktop.webp" 
+                                        alt="ноутбук с заставкой сайта">
+                                </picture>
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-
                                     </p>
                                 </div>
                             </div>
