--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     <main>
             <section class="hero">
                 <h1 class="hero__title">Ефективні рішення для <br> вашого бізнесу</h1>
-                <button class="btn hero__btn" type="button" data-modal-open>Замовити послугу</button>
+                <button class="btn hero__btn" 
+                type="button" 
+                data-modal-open>Замовити послугу</button>
             </section>
         
         <!--Особенности-->
